# gpt-client

./: Cargo.toml  README.md
src/: main.rs
src/helpers/: traits.rs
